--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ migrate_working_dir/
 
 # Flutter/Dart/Pub related
 **/doc/api/
+**/api.dart
 **/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins
