--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_generative_ai: ^0.2.0
+  flutter_markdown: ^0.6.19
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
