--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_markdown: ^0.6.19
   shared_preferences: ^2.2.2
   url_launcher: ^6.2.4
+  adaptive_theme: ^3.6.0
 
 dev_dependencies:
   flutter_test:
