--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.2.2
   url_launcher: ^6.2.4
   adaptive_theme: ^3.6.0
+  speech_to_text: ^6.6.0
 
 dev_dependencies:
   flutter_test:
