added option to send image

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^6.2.4
   adaptive_theme: ^3.6.0
   speech_to_text: ^6.6.0
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
