--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_generative_ai: ^0.2.0
   flutter_markdown: ^0.6.19
-  shared_preferences: ^2.2.2
   url_launcher: ^6.2.4
   adaptive_theme: ^3.6.0
   speech_to_text: ^6.6.0
@@ -45,6 +44,7 @@ dependencies:
   camera: ^0.10.5+9
   path_provider: ^2.1.2
   path: ^1.8.3
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
