--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   path_provider: ^2.1.2
   path: ^1.8.3
   hive: ^2.2.3
+  read_pdf_text: ^0.2.1
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
